macos/openim_sdk_ffi_apple.h

extern void GetFriendApplicationListAsApplicant(char* operationID);
extern void AcceptFriendApplication(char* operationID, char* userIDHandleMsg);
extern void RefuseFriendApplication(char* operationID, char* userIDHandleMsg);
extern void AddBlack(char* operationID, char* blackUserID);
extern void GetBlackList(char* operationID);
extern void RemoveBlack(char* operationID, char* removeUserID);
extern void CreateGroup(char* operationID, char* groupReqInfo);
extern void JoinGroup(char* operationID, char* groupID, char* reqMsg, int32_t joinSource);
extern void QuitGroup(char* operationID, char* groupID);
extern void DismissGroup(char* operationID, char* groupID);
extern void ChangeGroupMute(char* operationID, char* groupID, _Bool isMute);
extern void ChangeGroupMemberMute(char* operationID, char* groupID, char* userID, int mutedSeconds);
extern void SetGroupMemberRoleLevel(char* operationID, char* groupID, char* userID, int roleLevel);
extern void SetGroupMemberInfo(char* operationID, char* groupMemberInfo);
extern void GetJoinedGroupList(char* operationID);
extern void GetSpecifiedGroupsInfo(char* operationID, char* groupIDList);
extern void SearchGroups(char* operationID, char* searchParam);
extern void SetGroupInfo(char* operationID, char* groupInfo);
extern void SetGroupVerification(char* operationID, char* groupID, int32_t verification);
extern void SetGroupLookMemberInfo(char* operationID, char* groupID, int32_t rule);
extern void SetGroupApplyMemberFriend(char* operationID, char* groupID, int32_t rule);
extern void GetGroupMemberList(char* operationID, char* groupID, int32_t filter, int32_t offset, int32_t count);
extern void GetGroupMemberOwnerAndAdmin(char* operationID, char* groupID);