lib/openim_sdk_ffi_bindings_generated.dart


  void GetFriendApplicationListAsApplicant(
    ffi.Pointer<ffi.Char> operationID,
  ) {
    return _GetFriendApplicationListAsApplicant(
      operationID,
    );
  }

  late final _GetFriendApplicationListAsApplicantPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'GetFriendApplicationListAsApplicant');
  late final _GetFriendApplicationListAsApplicant =
      _GetFriendApplicationListAsApplicantPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>)>();

  void AcceptFriendApplication(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> userIDHandleMsg,
  ) {
    return _AcceptFriendApplication(
      operationID,
      userIDHandleMsg,
    );
  }

  late final _AcceptFriendApplicationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('AcceptFriendApplication');
  late final _AcceptFriendApplication = _AcceptFriendApplicationPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void RefuseFriendApplication(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> userIDHandleMsg,
  ) {
    return _RefuseFriendApplication(
      operationID,
      userIDHandleMsg,
    );
  }

  late final _RefuseFriendApplicationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('RefuseFriendApplication');
  late final _RefuseFriendApplication = _RefuseFriendApplicationPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void AddBlack(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> blackUserID,
  ) {
    return _AddBlack(
      operationID,
      blackUserID,
    );
  }

  late final _AddBlackPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('AddBlack');
  late final _AddBlack = _AddBlackPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void GetBlackList(
    ffi.Pointer<ffi.Char> operationID,
  ) {
    return _GetBlackList(
      operationID,
    );
  }

  late final _GetBlackListPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'GetBlackList');
  late final _GetBlackList =
      _GetBlackListPtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  void RemoveBlack(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> removeUserID,
  ) {
    return _RemoveBlack(
      operationID,
      removeUserID,
    );
  }

  late final _RemoveBlackPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('RemoveBlack');
  late final _RemoveBlack = _RemoveBlackPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void CreateGroup(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupReqInfo,
  ) {
    return _CreateGroup(
      operationID,
      groupReqInfo,
    );
  }

  late final _CreateGroupPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('CreateGroup');
  late final _CreateGroup = _CreateGroupPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void JoinGroup(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    ffi.Pointer<ffi.Char> reqMsg,
    int joinSource,
  ) {
    return _JoinGroup(
      operationID,
      groupID,
      reqMsg,
      joinSource,
    );
  }

  late final _JoinGroupPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>, ffi.Int32)>>('JoinGroup');
  late final _JoinGroup = _JoinGroupPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, int)>();

  void QuitGroup(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
  ) {
    return _QuitGroup(
      operationID,
      groupID,
    );
  }

  late final _QuitGroupPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('QuitGroup');
  late final _QuitGroup = _QuitGroupPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void DismissGroup(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
  ) {
    return _DismissGroup(
      operationID,
      groupID,
    );
  }

  late final _DismissGroupPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('DismissGroup');
  late final _DismissGroup = _DismissGroupPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void ChangeGroupMute(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    bool isMute,
  ) {
    return _ChangeGroupMute(
      operationID,
      groupID,
      isMute,
    );
  }

  late final _ChangeGroupMutePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Bool)>>('ChangeGroupMute');
  late final _ChangeGroupMute = _ChangeGroupMutePtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, bool)>();

  void ChangeGroupMemberMute(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    ffi.Pointer<ffi.Char> userID,
    int mutedSeconds,
  ) {
    return _ChangeGroupMemberMute(
      operationID,
      groupID,
      userID,
      mutedSeconds,
    );
  }

  late final _ChangeGroupMemberMutePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>, ffi.Int)>>('ChangeGroupMemberMute');
  late final _ChangeGroupMemberMute = _ChangeGroupMemberMutePtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, int)>();

  void SetGroupMemberRoleLevel(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    ffi.Pointer<ffi.Char> userID,
    int roleLevel,
  ) {
    return _SetGroupMemberRoleLevel(
      operationID,
      groupID,
      userID,
      roleLevel,
    );
  }

  late final _SetGroupMemberRoleLevelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>, ffi.Int)>>('SetGroupMemberRoleLevel');
  late final _SetGroupMemberRoleLevel = _SetGroupMemberRoleLevelPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, int)>();

  void SetGroupMemberInfo(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupMemberInfo,
  ) {
    return _SetGroupMemberInfo(
      operationID,
      groupMemberInfo,
    );
  }

  late final _SetGroupMemberInfoPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('SetGroupMemberInfo');
  late final _SetGroupMemberInfo = _SetGroupMemberInfoPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void GetJoinedGroupList(
    ffi.Pointer<ffi.Char> operationID,
  ) {
    return _GetJoinedGroupList(
      operationID,
    );
  }

  late final _GetJoinedGroupListPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'GetJoinedGroupList');
  late final _GetJoinedGroupList =
      _GetJoinedGroupListPtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  void GetSpecifiedGroupsInfo(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupIDList,
  ) {
    return _GetSpecifiedGroupsInfo(
      operationID,
      groupIDList,
    );
  }

  late final _GetSpecifiedGroupsInfoPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('GetSpecifiedGroupsInfo');
  late final _GetSpecifiedGroupsInfo = _GetSpecifiedGroupsInfoPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void SearchGroups(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> searchParam,
  ) {
    return _SearchGroups(
      operationID,
      searchParam,
    );
  }

  late final _SearchGroupsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('SearchGroups');
  late final _SearchGroups = _SearchGroupsPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void SetGroupInfo(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupInfo,
  ) {
    return _SetGroupInfo(
      operationID,
      groupInfo,
    );
  }

  late final _SetGroupInfoPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('SetGroupInfo');
  late final _SetGroupInfo = _SetGroupInfoPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void SetGroupVerification(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    int verification,
  ) {
    return _SetGroupVerification(
      operationID,
      groupID,
      verification,
    );
  }

  late final _SetGroupVerificationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Int32)>>('SetGroupVerification');
  late final _SetGroupVerification = _SetGroupVerificationPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)>();

  void SetGroupLookMemberInfo(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    int rule,
  ) {
    return _SetGroupLookMemberInfo(
      operationID,
      groupID,
      rule,
    );
  }

  late final _SetGroupLookMemberInfoPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Int32)>>('SetGroupLookMemberInfo');
  late final _SetGroupLookMemberInfo = _SetGroupLookMemberInfoPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)>();

  void SetGroupApplyMemberFriend(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    int rule,
  ) {
    return _SetGroupApplyMemberFriend(
      operationID,
      groupID,
      rule,
    );
  }

  late final _SetGroupApplyMemberFriendPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Int32)>>('SetGroupApplyMemberFriend');
  late final _SetGroupApplyMemberFriend =
      _SetGroupApplyMemberFriendPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)>();

  void GetGroupMemberList(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    int filter,
    int offset,
    int count,
  ) {
    return _GetGroupMemberList(
      operationID,
      groupID,
      filter,
      offset,
      count,
    );
  }

  late final _GetGroupMemberListPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Int32, ffi.Int32, ffi.Int32)>>('GetGroupMemberList');
  late final _GetGroupMemberList = _GetGroupMemberListPtr.asFunction<
      void Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int, int, int)>();

  void GetGroupMemberOwnerAndAdmin(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
  ) {
    return _GetGroupMemberOwnerAndAdmin(
      operationID,
      groupID,
    );
  }
